# DS-Capstone-2

./: Identify_card.py  README.md  benchmark_run.py  mtg_layout.py  pyproject.toml  train_detector.py  train_identifier.py
