[project]
name = "ds-capstone-2"
version = "1.1.0"
description = "Work in progress."
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.97.0",
    "easyocr>=1.7.2",
    "faiss-cpu>=1.13.2",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.7",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "paddleocr>=2.10.0",
    "pillow>=11.2.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "symspellpy>=6.9.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "ultralytics>=8.4.45",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
